Remove logs and add comprehensive .gitignore
- Remove all log files from tracking (logs/ directory and *.log files)
- Add .gitignore to exclude logs, temp files, Python cache, and Cowrie-specific directories
- Keep only essential configuration files in repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
+# Logs
+logs/
+*.log
+*.log.*
 
+# Temporary files
+*.tmp
+*.bak
+*.backup
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Environment
+.env
+.venv
+env/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Cowrie specific
+downloads/
+var/lib/cowrie/
+var/run/cowrie.pid
