--- a/cowrie-dashboard.service
+++ b/cowrie-dashboard.service
@@ -1,18 +1,28 @@
 [Unit]
-Description=Cowrie Real-time Dashboard
-After=network.target cowrie.service
+Description=Cowrie Optimized Dashboard
+After=network.target
 
 [Service]
 Type=simple
 User=cowrie
 Group=cowrie
 WorkingDirectory=/home/cowrie/cowrie
-Environment=PATH=/home/cowrie/cowrie/cowrie-env/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-ExecStart=/home/cowrie/cowrie/cowrie-env/bin/python3 /home/cowrie/cowrie/cowrie_dashboard_mobile.py
-Restart=on-failure
-RestartSec=5
-StandardOutput=journal
-StandardError=journal
+Environment=PATH=/home/cowrie/cowrie/cowrie-env/bin
+ExecStart=/home/cowrie/cowrie/cowrie-env/bin/python3 /home/cowrie/cowrie/etc/dashboard.py
+Restart=always
+RestartSec=10
+
+# Security settings
+NoNewPrivileges=true
+PrivateTmp=true
+ProtectSystem=strict
+ProtectHome=true
+ReadWritePaths=/home/cowrie/cowrie/var/log/cowrie
+
+# Performance settings
+LimitNOFILE=65536
+MemoryMax=256M
+CPUQuota=50%
 
 [Install]
 WantedBy=multi-user.target
